--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,27 +336,19 @@ main {
 .our-information-container {
   background-color: var(--card-color);
   color: var(--title-color);
-  margin-top: 5rem;
   width: 100%;
   height: 100%;
-  padding: 5% 0;
-}
-.our-information-container span {
-  color: var(--text-color);
+  padding-top: 1rem;
 }
 
 .our-information-container h3 {
   margin-top: 1rem;
 }
-.our-information-container a {
-  flex-direction: column;
-  text-decoration: none;
-  color: var(--text-color);
-}
 
 .our-information {
   margin-top: 1.5rem;
   margin-left: 1.5rem;
+  font-size: 11px;
 }
 
 a:hover {
@@ -366,17 +358,27 @@ a:hover {
 .social-container {
   margin-left: -0.5rem;
   align-items: center;
-  gap: 1rem;
+  gap: 0.2rem;
   display: flex;
+  width: 15px;
+  color: var(--title-color);
+}
+.bx {
+  color: var(--title-color);
+  scale: 0.7;
 }
 
-footer {
-  color: var(--text-color-light);
-  align-items: center;
+.footer-copy {
+  display: block;
   text-align: center;
-  margin-top: 120px;
-  margin-bottom: 50px;
-  font-size: 12px;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+  margin: 3.5rem 0px 0rem;
+  padding-bottom: 2rem;
+}
+
+footer ul {
+  list-style: none;
 }
 
 .cart-container {
@@ -509,7 +511,7 @@ footer {
   right: -8px;
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1024px) {
   .bx-grid-alt {
     color: hsla(0, 0%, 100%, 0);
   }
@@ -542,7 +544,7 @@ footer {
   }
 
   .first-product-img {
-    margin-left: 800px;
+    margin-left: 500px;
     margin-right: 500px;
     margin-top: -200px;
     width: 480px;
@@ -550,7 +552,7 @@ footer {
   }
 
   .info-first-product {
-    margin: -450px auto;
+    margin: -450px -200px;
     padding-left: 50px;
     position: absolute;
     align-items: center;
@@ -614,11 +616,45 @@ footer {
     margin-top: -2rem;
   }
 
-  .our-information-container {
-    width: 100%;
+  .section {
+    padding: 8rem 0px 1rem;
   }
 
-  .our-information {
-    display: inline-block;
+  .footer {
+    display: block;
+  }
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1024px;
+  }
+
+  .footer-container {
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(--border-color);
+    grid-template-columns: repeat(4, max-content);
+    justify-content: space-between;
+    font-size: larger;
+    line-height: 2.5rem;
+  }
+
+  .social-container {
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  .bx {
+    scale: 1;
+    gap: 2rem;
+  }
+  .grid {
+    display: grid;
+  }
+  .footer-copy {
+    display: block;
+    text-align: center;
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+    margin: 3.5rem 0px 1rem;
   }
 }
