--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,9 +189,12 @@ main {
 }
 
 .cart-content {
-  align-items: center;
+  grid-template-columns: 200px;
+  gap: 2rem;
   justify-content: center;
-  margin: 0 auto;
+}
+.grid {
+  display: grid;
 }
 
 .product img {
@@ -263,7 +266,6 @@ main {
 .cart-content {
   padding: 1rem 1.5rem;
   margin: auto;
-  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
   align-items: center;
 }
 
@@ -296,36 +298,37 @@ main {
   box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
 }
 
-.product {
+.card-img {
   background-color: var(--border-color);
   margin-top: 1rem;
-  width: 70%;
-  height: 70%;
-  margin: 1rem auto;
+  width: 100%;
+  height: 100%;
+  margin: 1rem auto 0;
   border-radius: 10px 10px 0px 0px;
+}
+.card-body {
+  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
+  padding-top: 0;
+  border-radius: 0 0 10% 10%;
 }
 
 .product-counter {
-  padding: 0.25rem;
-  background-color: var(--body-color);
-  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 20%);
-  color: var(--title-color);
   border-radius: 50%;
-  font-size: 1.25rem;
-  display: inline-flex;
   position: absolute;
+  width: 30px;
+  height: 30px;
+  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 50%);
+  margin-left: 95px;
+  margin-top: 150px;
+  font-size: x-large;
+}
+button {
   border: none;
-  right: 6rem;
-  left: auto;
-  margin-top: -2rem;
-  margin: -2rem auto;
-  padding: 1rem 1rem;
-  transition: 0.3s;
 }
 
 .product-counter:hover {
   background-color: var(--first-color);
-
+  color: var(--container-color);
   cursor: pointer;
 }
 
@@ -343,6 +346,7 @@ main {
   width: 100%;
   height: 100%;
   padding-top: 1rem;
+  margin-top: 5rem;
 }
 
 .our-information-container h3 {
@@ -385,7 +389,26 @@ footer ul {
   list-style: none;
 }
 
-.cart-container {
+li:hover {
+  cursor: pointer;
+  color: var(--first-color);
+}
+
+i:hover {
+  color: var(--first-color);
+  cursor: pointer;
+}
+
+.bx-moon:hover {
+  cursor: pointer;
+  color: var(--first-color);
+}
+.bx-sun:hover {
+  cursor: pointer;
+  color: var(--first-color);
+}
+
+.contenedor {
   background-color: rgba(109, 109, 109, 0.737);
   width: 100%;
   height: 100%;
@@ -397,7 +420,7 @@ footer ul {
   padding: 2.5rem 1.5rem 1rem 1.5rem;
 }
 
-.cart-container.hide {
+.contenedor.hide {
   left: -100%;
 }
 
@@ -515,7 +538,7 @@ footer ul {
   right: -8px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .bx-grid-alt {
     color: hsla(0, 0%, 100%, 0);
   }
@@ -599,9 +622,28 @@ footer ul {
   }
 
   .cart-content {
-    align-items: center;
+    grid-template-columns: repeat(3, 262px);
     justify-content: center;
-    display: flex;
+    column-gap: 7rem;
+    padding: 0px;
+  }
+  .grid {
+    display: grid;
+  }
+  .card-product {
+    background-color: var(--card-color);
+    margin: auto;
+    width: 25px;
+  }
+
+  .product-counter {
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    box-shadow: 0 1px 4px hsl(0deg 4% 15% / 50%);
+    margin-left: 180px;
+    margin-top: 260px;
   }
 
   .btn1 {
@@ -634,12 +676,18 @@ footer ul {
   }
 
   .footer-container {
-    padding-bottom: 0.5rem;
+    padding-bottom: 0rem;
+    padding-top: 15px;
     border-bottom: 1px solid var(--border-color);
     grid-template-columns: repeat(4, max-content);
     justify-content: space-between;
     font-size: larger;
     line-height: 2.5rem;
+    margin-top: 10px;
+  }
+
+  .card-body {
+    margin-bottom: 150px;
   }
 
   .social-container {
@@ -657,8 +705,14 @@ footer ul {
   .footer-copy {
     display: block;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     font-size: var(--smaller-font-size);
-    color: var(--text-color-light);
-    margin: 3.5rem 0px 1rem;
+    margin: 10rem auto 1.5rem;
+  }
+
+  .our-information-container {
+    padding-top: 10px;
+    margin-top: 15px;
   }
 }
