--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,8 +308,10 @@ main {
 }
 .card-body {
   box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
-  padding-top: 0;
+  padding-top: 0.5rem;
   border-radius: 0 0 10% 10%;
+  padding-bottom: 15px;
+  padding-left: 1rem;
 }
 
 .product-counter {
@@ -338,6 +340,24 @@ button {
 
 .product-to-add {
   margin-bottom: 2.5rem;
+}
+
+.card-body {
+  padding-top: 1rem;
+}
+.card-price span {
+  color: var(--title-color);
+  font-size: large;
+  font-weight: 500;
+}
+.card-price {
+  font-size: small;
+}
+
+.card-title span {
+  color: var(--title-color);
+  font-size: large;
+  font-weight: 500;
 }
 
 .our-information-container {
@@ -634,6 +654,18 @@ i:hover {
     background-color: var(--card-color);
     margin: auto;
     width: 25px;
+  }
+
+  .card-price span {
+    color: var(--title-color);
+    font-size: x-large;
+    font-weight: 500;
+  }
+
+  .card-title span {
+    color: var(--title-color);
+    font-size: x-large;
+    font-weight: 500;
   }
 
   .product-counter {
