--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,16 +134,19 @@ main {
 }
 
 .first-product-img {
+  max-width: 1000px;
+  width: 60%;
   background-color: var(--first-color);
-  width: 258px;
-  height: 430px;
-  padding-bottom: 2rem;
+  padding-top: 10.5rem;
+  padding-bottom: 0.5rem;
   display: flex;
+  margin-left: 156px;
+}
+
+.first-img {
+  align-items: center;
   justify-content: center;
-  align-items: flex-end;
-  justify-self: flex-end;
-  transform: translateX(1.5rem);
-  margin-left: 110px;
+  margin: auto;
 }
 
 .info-first-product h1 {
@@ -166,8 +169,7 @@ main {
   align-items: center;
   justify-content: center;
   margin: 1.5rem 2rem 0.5rem;
-  background-color: var(--container-color);
-  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
+  background-color: var(--body-color);
 }
 
 .btn-add-cart {
@@ -205,6 +207,7 @@ main {
 }
 
 .main-show-products {
+  max-width: 1000px;
   padding: 1.5rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -215,12 +218,11 @@ main {
   color: var(--first-color);
 }
 .show-products {
+  max-width: 1000px;
   padding: 1rem 1.5rem;
-  margin: 0.5rem 1rem 0.5rem;
+  margin: auto;
   width: 50%;
-  background-color: var(--container-color);
-
-  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
+  background-color: var(--body-color);
   align-items: center;
   justify-content: space-between;
   text-align: center;
@@ -245,8 +247,8 @@ main {
   padding: 1rem 1.5rem;
   margin: 0.5rem 0.5rem 0.5rem;
   width: 50%;
-  background-color: var(--container-color);
-  box-shadow: 0 1px 4px hsl(0deg 4% 15% / 10%);
+  background-color: var(--body-color);
+
   align-items: center;
   justify-content: space-between;
   text-align: center;
@@ -562,6 +564,7 @@ i:hover {
   .bx-grid-alt {
     color: hsla(0, 0%, 100%, 0);
   }
+
   .menu-bar {
     font-weight: 500;
     font-size: 15px;
@@ -580,34 +583,34 @@ i:hover {
     color: var(--title-color);
   }
   .main-first-product {
-    margin-top: 200px;
-    margin-right: 90px;
-    margin-left: 530px;
+    display: grid;
+    column-gap: 10rem;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    max-width: 1000px;
+  }
+  .main-product {
     align-items: center;
     justify-content: center;
   }
-  .main-product {
-    width: 100%;
-  }
 
   .first-product-img {
-    margin-left: 500px;
+    margin-left: 1000px;
     margin-right: 500px;
     margin-top: -200px;
     width: 480px;
     height: 880px;
   }
 
-  .info-first-product {
-    margin: -450px -200px;
-    padding-left: 50px;
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    width: 600px;
-  }
   .info-first-product h1 {
     font-size: 50px;
+  }
+  .info-first-product {
+    max-width: 1000px;
+    position: absolute;
+    width: 400px;
+    margin-top: 200px;
   }
   .info-first-product h3 {
     font-size: 20px;
@@ -618,14 +621,16 @@ i:hover {
   }
 
   .main-show-products {
-    margin: 50px 100px 100px;
+    max-width: 1000px;
+    width: 1900px;
+    margin: auto;
     align-items: center;
     justify-content: center;
+    padding-top: 5rem;
   }
 
   .show-products {
-    margin-left: 100px;
-    width: 50%;
+    width: 100%;
   }
 
   .show-products a {
@@ -633,8 +638,7 @@ i:hover {
   }
 
   .show-products2 {
-    margin-right: 100px;
-    width: 50%;
+    width: 100%;
   }
 
   .show-products2 a {
