--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,6 +521,32 @@ i:hover {
   bottom: -8px;
   right: -8px;
 }
+.cart-products {
+  display: grid;
+  grid-column: 2;
+  grid-row: 1;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+}
+.img-cart {
+  width: 100%;
+  height: 40%;
+  grid-column: 1;
+  grid-row: 1/1;
+}
+.product-info {
+  grid-column: 2;
+  grid-row: 1/1;
+}
+
+.cart-products #name {
+  color: var(--title-color);
+  font-weight: 500;
+}
+.product-info span {
+  color: var(--first-color);
+}
 
 @media screen and (min-width: 992px) {
   .bx-grid-alt {
@@ -726,5 +752,17 @@ i:hover {
   .our-information-container {
     padding-top: 10px;
     margin-top: 15px;
+  }
+  .cart-products {
+    display: grid;
+    grid-column: 2;
+    grid-row: 1;
+    align-items: center;
+    justify-content: center;
+    column-gap: 1rem;
+  }
+  .img-cart {
+    width: 100%;
+    height: 40%;
   }
 }
