--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,11 +527,15 @@ i:hover {
   grid-row: 1;
   align-items: center;
   justify-content: center;
+  padding-top: 2rem;
   column-gap: 1rem;
+  width: 250px;
+  height: 100px;
+  margin: auto;
 }
 .img-cart {
-  width: 90%;
-  height: 70%;
+  width: 100%;
+  height: 100%;
   grid-column: 1;
   grid-row: 1/1;
 }
